# aiosonic

./: .drone.yml  .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst
docs/_source/: aiosonic.rst  modules.rst
src/aiosonic/: __init__.py  cli.py  errors.py  sonic_api.py  types.py
tests/: test_sonic_api.py
