[tool.poetry]
name = "aiosonic"
version = "0.0.0"
description = "A API wrapper for subsonic"
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
aiohttp = "^3.5"
cchardet = "^2.1"
aiodns = "^1.2"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
pylint = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
codecov = "*"
isort = "*"
black = "=18.9b0"
bpython = "^0.17.1"
asynctest = "^0.12.2"
pytest-asyncio = "^0.10.0"

[tool.poetry.scripts]
aiosonic = "aiosonic.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
