[tool.poetry]
name = "aiosonic"
version = "0.0.0"
description = "A API wrapper for subsonic"
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
aiohttp = "^3.5"
cchardet = "^2.1"
aiodns = "^1.2"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.670.0"
flake8 = "^3.7"
pylint = "^2.2"
tox = "^3.7"
pytest = "^4.3"
pytest-cov = "^2.6"
codecov = "^2.0"
isort = "^4.3"
black = "=18.9b0"
bpython = "^0.17.1"
asynctest = "^0.12.2"
pytest-asyncio = "^0.10.0"

[tool.poetry.scripts]
aiosonic = "aiosonic.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
